[package]
name = "pallet-dao"
version = "0.7.0"
description = "Custom pallet for creation decentrilize autonomous organization."
authors = ["UNIVERSALDOT FOUNDATION <https://github.com/UniversalDot>"]
homepage = "https://universaldot.foundation"
edition = "2021"
license = "Apache-2.0"
publish = false
repository = "https://github.com/UniversalDot/pallets"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

# dependencies
[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

frame-benchmarking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", optional = true , branch = "polkadot-v0.9.27" }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
log = { version = "0.4.14", default-features = false }
pallet-balances = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-std = { version = "4.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }

# universal
pallet-did = { path = "../did", package = "pallet-did", default-features = false }
pallet-profile = { path = "../profile", version = "0.7.0", default-features = false }

# dev dependencies
[dev-dependencies]
once_cell = { version = "1.10.0" }
pallet-timestamp = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-io = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "frame-benchmarking/std",
]
try-runtime = ["frame-support/try-runtime"]