[package]
name = "pallet-task"
version = "0.7.0"
description = "FRAME pallet for creating tasks"
authors = ["UNIVERSALDOT FOUNDATION <https://github.com/UniversalDot>"]
homepage = "https://universaldot.foundation"
edition = "2021"
license = "Apache-2.0"
publish = false
repository = "https://github.com/UniversalDot/pallets"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
log = { version = "0.4.14", default-features = false }
pallet-balances = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-timestamp = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
serde = { version = "1.0.142", default-features = false }
sp-std = { version = "4.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }

# universal
pallet-profile = { path = "../profile", version = "0.7.0", default-features = false }
pallet-dao = { path = "../dao", version = "0.7.0", default-features = false }
sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }

[dev-dependencies]
pallet-dao = { path = "../dao", version = "0.7.0", default-features = false }
pallet-did = { path = "../did", version = "0.7.0", default-features = false }
sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-io = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "pallet-balances/std",
    "pallet-profile/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking/std",
    "pallet-timestamp/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]