[package]
name = "deoss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11.11", features = ["stream","multipart","json"] }
bytes = "1.0.1"
uuid = {version = "1.4.0", features = ["v4"]}