[package]
name    = "gutp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
# Useful crate to handle errors.
anyhow = "1"
# Crate to simplify working with bytes.
bytes = "1"
# The Spin SDK.
spin-sdk ={ git = "https://github.com/fermyon/spin", tag = "v1.1.0"}
# Crate that generates Rust Wasm bindings from a WebAssembly interface.
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba" }
form_urlencoded = "1.1"
serde = { version = '1.0', default-features = false, features = ['derive'] }
serde_json = { version = '1.0', default-features = false, features = ['alloc'] }
json-digest = "0.0.16"

eightfish = { package = "eightfish", git = "https://github.com/eightfish-org/eightfish"}
eightfish-derive = {package = "eightfish-derive", git = "https://github.com/eightfish-org/eightfish"}
spin_worker = {package = "spin_worker", git = "https://github.com/eightfish-org/eightfish"}

#eightfish = {path = "../../eightfish"}
#eightfish-derive = {path = "../../eightfish/eightfish-derive"}
#spin_worker = {path = "../../eightfish/spin_worker"}

gutp-types = {path = "../gutp-types/"}
sql-builder = "3.1"
