[package]
name = "app"
version = "1.0.0"
authors = ["The Teaclave Authors"]
build = "build.rs"
edition = "2021"


[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
actix-web = { version = "=4.1.0", features = ["openssl"] }
actix-http = "=3.2.1"
actix-cors = "=0.6.1"
cookie = "=0.16.0"
actix-files = { version = "0.6.0" }
futures-util = { version = "=0.3.25", default-features = false, features = ["sink"] }
scoped-tls = "=1.0"
proc-macro2 = { version = "=1.0.40" }
quote = { version = "=1.0.21" }
openssl = "=0.10.40"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
hex = "=0.4.3"
log = "0.4"
log4rs = "=1.1.1"
mysql = "*"
config = "=0.13.1"
rand = "0.8.5"
jsonwebtoken = "8"
web3 = "=0.18.0"
time= "=0.3.9"
base64 = "=0.13.0"
chrono = "=0.4.24"
http_req = "=0.9.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rayon = "=1.7.0"
pest_meta = "=2.5.6"
pest = "=2.5.6"
pest_generator = "=2.5.6"
jsonwebkey-convert = { git = "https://github.com/ksrust/jsonwebkey-rs.git",  version = "0.3.2", features = [ "full" ] }
subxt = "=0.25.0"
sp-core = "7.0.0"

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_types = { path = "../../../sgx_types" }
sgx_urts = { path = "../../../sgx_urts" }

[profile.release]
debug = true

