[package]
name = "pallet-dao"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Remark storage pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = "0.4.17"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", optional = true }

#frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true, path = "../benchmarking" }
#frame-support = { version = "4.0.0-dev", default-features = false, path = "../support" }
#frame-system = { version = "4.0.0-dev", default-features = false, path = "../system" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40", default-features = false, optional = true }


#sp-core = { version = "6.0.0", default-features = false, path = "../../primitives/core" }
#sp-io = { version = "6.0.0", default-features = false, path = "../../primitives/io" }
#sp-runtime = { version = "6.0.0", default-features = false, path = "../../primitives/runtime" }
#sp-std = { version = "4.0.0", default-features = false, path = "../../primitives/std" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40", default-features = false }


pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40", default-features = false }
#pallet-balances = { version = "4.0.0-dev", default-features = false, path = "../balances" }
pallet-assets = { version = "4.0.0-dev", default-features = false, path = "../assets" }
pallet-dao-collective = { version = "4.0.0-dev", default-features = false, path = "../dao-collective" }
#pallet-multisig = { version = "4.0.0-dev", default-features = false, path = "../multisig" }
pallet-multisig = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40", default-features = false }
pallet-nftvpn = { path = '../nftvpn', default-features = false }




[dev-dependencies]
#sp-core = { version = "6.0.0", default-features = false, path = "../../primitives/core" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40", default-features = false }

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
std = [
	"frame-benchmarking?/std",
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"serde",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"pallet-multisig/std",
	"pallet-assets/std",
	"pallet-dao-collective/std",
]
try-runtime = [ "frame-support/try-runtime" ]
